交易查看操盘详情

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "恒泰",
-    "appid" : "__UNI__7898FA1",
+    "appid" : "__UNI__639FBA0",
     "description" : "恒泰",
     "versionName" : "3.3.3",
     "versionCode" : 333,
